[package]
name = "candle_auction"
version = "0.1.0"
edition = "2021"
authors = ["Jacksoom <lifengliu1994@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.0"
cosmwasm-storage = "1.1.0" 
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
cw721-base = "0.15.0"
cw721 = "0.15.0"
hex = "0.4.3"
schemars = "0.8.10"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
thiserror = "1.0.32"
unicode-segmentation = "1.9.0"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
blake2b-ref = "0.3.1"
cosmwasm-schema = "1.1.3"                   # A dev-dependency for CosmWasm contracts to generate JSON Schema files.
cw20 = "0.16.0"                 # Definition and types for the CosmWasm-20 interface
